[gd_scene load_steps=13 format=3 uid="uid://cp26xup8rvuju"]

[ext_resource type="Texture2D" uid="uid://d1n5wjgmn3fvk" path="res://barBottom.png" id="1_n5ude"]
[ext_resource type="Script" uid="uid://d1ho48tvx4ahb" path="res://sub_viewport_container.gd" id="1_y4yjw"]
[ext_resource type="Texture2D" uid="uid://cokilw6ddgylg" path="res://barTop.png" id="2_y4yjw"]
[ext_resource type="Texture2D" uid="uid://qu0iy0bc6db6" path="res://status.png" id="3_waa4j"]
[ext_resource type="Texture2D" uid="uid://7spguahkvwdh" path="res://bar.png" id="4_ok7cu"]
[ext_resource type="FontFile" uid="uid://c0nfqkirmywwl" path="res://QuinqueFive.ttf" id="5_irxef"]
[ext_resource type="Texture2D" uid="uid://cwhqcy8wptwyf" path="res://commands.png" id="8_ok7cu"]
[ext_resource type="Texture2D" uid="uid://culwf42ifdunu" path="res://window.png" id="8_waa4j"]
[ext_resource type="Texture2D" uid="uid://cb5qv4ofhab3g" path="res://cursor.png" id="9_irxef"]
[ext_resource type="AudioStream" uid="uid://b3lyujqk4ojcd" path="res://select.wav" id="10_e2l4f"]

[sub_resource type="Theme" id="Theme_irxef"]
default_font = ExtResource("5_irxef")
default_font_size = 10

[sub_resource type="Theme" id="Theme_ok7cu"]
default_font = ExtResource("5_irxef")
default_font_size = 10
/fonts/font = ExtResource("5_irxef")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_y4yjw")

[node name="barTop" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 480.0
texture = ExtResource("1_n5ude")
metadata/_edit_lock_ = true

[node name="barBottom" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 480.0
texture = ExtResource("2_y4yjw")
metadata/_edit_lock_ = true

[node name="status" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 480.0
texture = ExtResource("3_waa4j")

[node name="healthBar" type="TextureProgressBar" parent="status"]
layout_mode = 0
offset_left = 188.0
offset_top = 392.0
offset_right = 288.0
offset_bottom = 432.0
texture_progress = ExtResource("4_ok7cu")

[node name="focusBar" type="TextureProgressBar" parent="status"]
layout_mode = 0
offset_left = 354.0
offset_top = 392.0
offset_right = 454.0
offset_bottom = 432.0
value = 20.0
texture_progress = ExtResource("4_ok7cu")

[node name="healthText" type="Label" parent="status"]
layout_mode = 0
offset_left = 224.0
offset_top = 414.0
offset_right = 286.0
offset_bottom = 438.0
theme_override_fonts/font = ExtResource("5_irxef")
theme_override_font_sizes/font_size = 10
text = "123"
horizontal_alignment = 2

[node name="focusText" type="Label" parent="status"]
layout_mode = 0
offset_left = 390.0
offset_top = 414.0
offset_right = 452.0
offset_bottom = 438.0
theme_override_fonts/font = ExtResource("5_irxef")
theme_override_font_sizes/font_size = 10
text = "20%"
horizontal_alignment = 2

[node name="commands" type="Node2D" parent="status"]

[node name="fight" type="Sprite2D" parent="status/commands"]
position = Vector2(176, 360)
scale = Vector2(2, 2)
texture = ExtResource("8_ok7cu")
region_enabled = true
region_rect = Rect2(0, 0, 43, 9)

[node name="skill" type="Sprite2D" parent="status/commands"]
position = Vector2(272, 360)
scale = Vector2(2, 2)
texture = ExtResource("8_ok7cu")
region_enabled = true
region_rect = Rect2(0, 9, 43, 9)

[node name="item" type="Sprite2D" parent="status/commands"]
position = Vector2(368, 360)
scale = Vector2(2, 2)
texture = ExtResource("8_ok7cu")
region_enabled = true
region_rect = Rect2(0, 18, 43, 9)

[node name="run" type="Sprite2D" parent="status/commands"]
position = Vector2(464, 360)
scale = Vector2(2, 2)
texture = ExtResource("8_ok7cu")
region_enabled = true
region_rect = Rect2(0, 27, 43, 9)

[node name="cursor" type="Sprite2D" parent="status/commands"]
position = Vector2(-8, 8)
scale = Vector2(2, 2)
texture = ExtResource("9_irxef")

[node name="selectSFX" type="AudioStreamPlayer" parent="status/commands"]
stream = ExtResource("10_e2l4f")

[node name="partyStatus" type="HBoxContainer" parent="status"]
visible = false
layout_mode = 1
offset_left = 64.0
offset_top = 440.0
offset_right = 576.0
offset_bottom = 480.0
theme = SubResource("Theme_irxef")
alignment = 1

[node name="Label" type="Label" parent="status/partyStatus"]
layout_mode = 2
text = "fsafgasg"

[node name="Label2" type="Label" parent="status/partyStatus"]
layout_mode = 2
text = "fsafgasg"

[node name="window" type="NinePatchRect" parent="."]
clip_contents = true
layout_mode = 0
offset_left = 128.0
offset_top = 24.0
offset_right = 512.0
offset_bottom = 112.0
texture = ExtResource("8_waa4j")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="Label" type="Label" parent="window"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 244.0
offset_bottom = 39.0
theme = SubResource("Theme_ok7cu")
text = "* Maremares appeared."
